--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,12 @@
   "description": "Automatic login to escaux",
   "version": "Beta-2",
   
+  "content_scripts": [
+    {
+      "matches" : ["*://smp.stable-4.smptel.irisnet.be/*login.php*"],
+      "js":["background.js"]
+    }
+  ],
   "browser_action": {
     "default_popup": "popup.html"
   },
