--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
   "description": "Automatic login to escaux",
   "version": "Beta-4",
   
+  "icons": { 
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png" 
+  },
   "content_scripts": [
     {
       "matches" : ["*://smp.stable-4.smptel.irisnet.be/*login.php*"],
@@ -12,6 +17,7 @@
     }
   ],
   "browser_action": {
+    "default_icon": "icon16.png",
     "default_popup": "popup.html"
   },
   "permissions": [
