--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Escaux Credential",
   "description": "Automatic login to escaux",
-  "version": "Beta-5",
+  "version": "0.5.0",
   
   "icons": { 
     "16": "icon16.png",
