Add full version name

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "name": "Escaux Credential",
   "description": "Automatic login to escaux",
   "version": "0.5.0",
+  "version_name": "Beta 5.0",
   
   "icons": { 
     "16": "icon16.png",
